[package]
name = "mcatool"
version = "0.2.0"
description = "A simple command line tool that allows you to easily read .mca (Minecraft region) files"
repository = "https://hogwarts.bits.team/git/Bits/mcatool"
authors = ["Nex"]
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["cargo", "std", "color"], default-features = false }
flate2 = { version = "1.0.22", features = ["zlib"], default-features = false }
