[package]
name = "mcatool"
version = "0.2.1"
description = "A simple command line tool that allows you to easily work with .mca (Minecraft region) files"
repository = "https://github.com/CyanNex/mcatool"
authors = ["Nex"]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
strip = "symbols"
panic = "abort"

[dependencies]
clap = { version = "^3.1", features = ["cargo", "std", "color"], default-features = false }
flate2 = { version = "^1.0", features = ["rust_backend"], default-features = false }
fastnbt = { version = "^2.1" }
serde = { version = "^1.0", features = ["derive"] }
fs_extra = { version = "^1.2" }
num_cpus = { version = "^1.13" }
